Modify method namings and update API specification
